Add Vercel configuration, implement CORS support, and enhance API with autocomplete feature

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "3000:3000" # Expose the app on port 3000
     volumes:
       - .:/usr/src/app # Mount the current directory into the container
+      - /usr/src/app/node_modules # Prevent overwriting node_modules
     environment:
       - NODE_ENV=local
     restart: always
